k8s/deploymentactivity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
        - name: activity-service
          image: olaniyikolawole744/activity-service:2.0
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
spec:
  selector:
    app: activity-service
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
