k8s/deploymentflink.yml
# FLINK JOBMANAGER SERVICE
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
spec:
  selector:
    app: flink-jobmanager
  ports:
    - name: ui
      port: 8081
      targetPort: 8081
---
# FLINK JOBMANAGER DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-jobmanager
  template:
    metadata:
      labels:
        app: flink-jobmanager
    spec:
      containers:
        - name: jobmanager
          image: flink:latest
          args:
            - jobmanager
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: flink-storage
              mountPath: /opt/flink/checkpoints
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: flink-storage
          persistentVolumeClaim:
            claimName: flink-pvc
---
# FLINK TASKMANAGER DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-taskmanager
  template:
    metadata:
      labels:
        app: flink-taskmanager
    spec:
      containers:
        - name: taskmanager
          image: flink:latest
          args:
            - taskmanager
          volumeMounts:
            - name: flink-storage
              mountPath: /opt/flink/checkpoints
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: flink-storage
          persistentVolumeClaim:
            claimName: flink-pvc
