k8s/statefulset-kafka.yml
# KAFKA HEADLESS SERVICE
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092

---
# KAFKA STATEFULSET
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest

          ports:
            - containerPort: 9092
              name: kafka

          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data

  volumeClaimTemplates:
    - metadata:
        name: kafka-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp2
        resources:
          requests:
            storage: 20Gi
---
############################################
# BACKEND SERVICES ENV EXAMPLE
############################################
# user-service
#
# KAFKA_BOOTSTRAP_SERVERS=kafka:9092
#
# transaction-service
#
# KAFKA_BOOTSTRAP_SERVERS=kafka:9092
#
# activity-service
#
# KAFKA_BOOTSTRAP_SERVERS=kafka:9092

############################################
# DATA FLOW
############################################

# user-service
#        ↓
# transaction-service
#        ↓
# activity-service
#        ↓
# Kafka Topics
#        ↓
# Flink consumes stream
#        ↓
# Flink processes events
#        ↓
# Iceberg tables
#        ↓
# S3 warehouse
